add description and github link

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>4kBuddy</title>
+    <title>4kBuddy - Easily choose custom resolution</title>
     <meta
       name="description"
-      content="4kBuddy helps you choose custom resolution by visualising how it will look"
+      content="4kBuddy helps You choose custom resolution by visualizing it on your screen and estimating performance gains."
     />
   </head>
   <body>
